[package]
name = "usermanagement"
version = "0.1.0"
edition = "2021"

[env]
#db_name = "helper:Paper"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rocket = { version = "0.5.0-rc.2", features = ["json", "secrets"] } # http handler
rocket = { version = "0.5.0-rc.2", features = ["json"] } # http handler
rocket_db_pools = { version = "0.1.0-rc.2", features = ["mongodb"]}
bson = {version = "2.4", features=["chrono-0_4"]}

argon2 = "0.5.0" # user hash
serde = "1.0" # json
chrono = {version="0.4.23", features =["serde"]} # DateTime
mongodb = "2.3.0"
uuid = "1.3.0" # for room id
tokio = "1.26.0"
rocket-multipart-form-data = "0.10.5"
rocket_contrib = "0.4.11"
serde_json = "1.0"
image = "0.24.5"
